--- a/.github/workflows/build_ios.yml
+++ b/.github/workflows/build_ios.yml
@@ -1,16 +1,42 @@
-name: Build iOS IPA
-on: push
+name: iOS-ipa-build
+
+on:
+  workflow_dispatch:
+
 jobs:
-  build:
+  build-ios:
+    name: 🎉 iOS Build
     runs-on: macos-latest
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v3
+
       - uses: subosito/flutter-action@v2
         with:
-          flutter-version: "3.19.5"
+          channel: 'stable'
+          architecture: x64
       - run: flutter pub get
-      - run: flutter build ipa --release --export-options-plist=ios/ExportOptions.plist
-      - uses: actions/upload-artifact@v4  # Pakai v4, bukan v3
+      
+
+      - run: pod repo update
+        working-directory: ios
+
+      - run: flutter build ios --release --no-codesign
+
+      - run: mkdir Payload
+        working-directory: build/ios/iphoneos
+
+      - run: mv Runner.app/ Payload
+        working-directory: build/ios/iphoneos
+
+      - name: Zip output
+        run: zip -qq -r -9 FlutterIpaExport.ipa Payload
+        working-directory: build/ios/iphoneos
+
+      - name: Upload binaries to release
+        uses: svenstaro/upload-release-action@v2
         with:
-          name: Runner.ipa
-          path: build/ios/ipa/Runner.ipa  # Pastikan path ini sesuai
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          file: build/ios/iphoneos/FlutterIpaExport.ipa
+          tag: v1.0
+          overwrite: true
+          body: "This is first release"
