--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,10 +36,9 @@ dependencies:
   http: ^1.0.0
   shared_preferences: ^2.0.15
   cupertino_icons: ^1.0.8
-  provider: 6.1.5
+  provider: ^6.1.5+1
   english_words: ^4.0.0
   google_fonts: ^6.2.1
-  syncfusion_flutter_pdfviewer: ^30.1.38
   flutter_cache_manager: ^3.3.1
   path_provider: ^2.1.5
   path: ^1.9.0
@@ -49,8 +48,11 @@ dependencies:
   audio_session: ^0.2.2
   table_calendar: ^3.0.9
   intl: ^0.20.2
+  dropdown_button2: ^2.3.9
+  flutter_secure_storage: ^10.0.0-beta.4
 
 dev_dependencies:
+  flutter_launcher_icons: ^0.14.4
   flutter_test:
     sdk: flutter
 
@@ -73,8 +75,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -102,3 +104,11 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/icon/app_icon.png"
+  adaptive_icon_foreground: "assets/icon/app_icon_foreground.png"
+  adaptive_icon_background: "assets/icon/app_icon_background.png"
+  min_sdk_android: 21
