--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 1.4.0+13
 
 environment:
   sdk: ^3.8.0
@@ -33,11 +33,10 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  http: ^1.0.0
+  http: ^1.2.0
   shared_preferences: ^2.0.15
   cupertino_icons: ^1.0.8
   provider: ^6.1.5+1
-  english_words: ^4.0.0
   google_fonts: ^6.2.1
   flutter_cache_manager: ^3.3.1
   path_provider: ^2.1.5
@@ -50,9 +49,13 @@ dependencies:
   intl: ^0.20.2
   dropdown_button2: ^2.3.9
   flutter_secure_storage: ^10.0.0-beta.4
+  package_info_plus: ^9.0.0
+  url_launcher: ^6.3.0
 
 dev_dependencies:
+  change_app_package_name: ^1.1.0
   flutter_launcher_icons: ^0.14.4
+  flutter_native_splash: ^2.4.0
   flutter_test:
     sdk: flutter
 
@@ -76,6 +79,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/icon/
     - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -111,3 +115,11 @@ flutter_launcher_icons:
   adaptive_icon_foreground: "assets/icon/app_icon_foreground.png"
   adaptive_icon_background: "assets/icon/app_icon_background.png"
   min_sdk_android: 21
+
+flutter_native_splash:
+  color: "#278C38"
+  image: "assets/icon/app_icon_foreground.png"
+  android: true
+  ios: true
+
+# #278C38
